Another dark mode fix.

--- a/_sass/rouge-github.scss
+++ b/_sass/rouge-github.scss
@@ -229,6 +229,6 @@
   background-color: #f8f8f8;
 
   @media (prefers-color-scheme: dark) {
-    color: #111;
+    background-color: #111;
   }
 }
